feat: add file_storage.url to streaming.conf

--- a/config/streaming.conf
+++ b/config/streaming.conf
@@ -3,6 +3,9 @@ chain_id = mainnet
 
 file_storage = {
   root = streaming-directory
+  urls = [
+    "http://localhost:8080",
+  ]
 }
 
 path_generator = {
