--- a/streaming/build.gradle
+++ b/streaming/build.gradle
@@ -6,6 +6,7 @@ def slf4jVersion = "1.7.25"
 dependencies {
     compile group: 'org.lz4', name: 'lz4-java', version: '1.8.0'
     compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '3.6.0'
 
     compile project(':chainbase')
     compile project(':common')
