--- a/docker-compose/streaming/.env
+++ b/docker-compose/streaming/.env
@@ -25,7 +25,7 @@ LC_COMPOSE_DATADIR=/app/streaming
 LC_COMPOSE_PATH_GENERATOR_SUFFIX=.lz4
 
 # Node settings
-LC_COMPOSE_IMAGE=java-tron
+LC_COMPOSE_IMAGE=nexus.bitq.dev/repository/java-tron
 LC_COMPOSE_IMAGE_TAG=latest
 LC_COMPOSE_NODE_ZEROMQ_PORT=5555
 LC_COMPOSE_NODE_WALLET_PORT=8090
