--- a/docker-compose/streaming/.env
+++ b/docker-compose/streaming/.env
@@ -25,8 +25,8 @@ LC_COMPOSE_DATADIR=/app/streaming
 LC_COMPOSE_PATH_GENERATOR_SUFFIX=.lz4
 
 # Node settings
-LC_COMPOSE_IMAGE=nexus.bitq.dev/repository/java-tron
-LC_COMPOSE_IMAGE_TAG=latest
+LC_COMPOSE_NODE_IMAGE=nexus.bitq.dev/repository/java-tron
+LC_COMPOSE_NODE_IMAGE_TAG=latest
 LC_COMPOSE_NODE_ZEROMQ_PORT=5555
 LC_COMPOSE_NODE_WALLET_PORT=8090
 LC_COMPOSE_NODE_JSONRPC_PORT=50545
@@ -34,13 +34,13 @@ LC_COMPOSE_NODE_WEB_PORT=80
 
 # Snapshot settings
 # Available snapshot links: https://developers.tron.network/docs/main-net-database-snapshots
-LC_COMPOSE_USE_SNAPSHOT=false
+LC_COMPOSE_USE_SNAPSHOT=true
 LC_COMPOSE_CUSTOM_SNAPSHOT_URL=
 
 # Exporter settings
 LC_COMPOSE_EXPORTER_IMAGE=nexus.bitq.dev/repository/nodes_exporter
 LC_COMPOSE_EXPORTER_IMAGE_TAG=latest
-LC_COMPOSE_EXPORTER_NODE_TAG=tron
+LC_COMPOSE_EXPORTER_NODE_TAG=java-tron
 LC_COMPOSE_EXPORTER_PORT=9128
-LC_COMPOSE_EXPORTER_ROLE=tron-streaming
+LC_COMPOSE_EXPORTER_ROLE=java-tron-streaming
 LC_COMPOSE_EXPORTER_PRIORITY=medium
