--- a/docker-compose/streaming/compose.yml
+++ b/docker-compose/streaming/compose.yml
@@ -100,7 +100,7 @@ services:
         condition: service_completed_successfully
     <<: [*common-network, *common-dns, *common-restart]
   tron-node:
-    image: ${LC_COMPOSE_IMAGE}:${LC_COMPOSE_IMAGE_TAG}
+    image: ${LC_COMPOSE_NODE_IMAGE}:${LC_COMPOSE_NODE_IMAGE_TAG}
     volumes:
       - node-data:/app/node-data
       - streaming-data:/app/streaming
@@ -127,7 +127,7 @@ services:
       nginx:
         condition: service_started
     # labels:
-    #   - __log_type=java-tron
+    #   - __log_type=java-tron-streaming
     <<:
       [
         *common-network,
