feat: add file_storage ttl_secs and pool_period_sec parameter

--- a/docker-compose/streaming/compose.yml
+++ b/docker-compose/streaming/compose.yml
@@ -45,6 +45,7 @@ services:
       BLOCKS_STREAMING_ENABLE: ${LC_COMPOSE_BLOCKS_STREAMING_ENABLE}
 
       SIGNER_PRIVATE_KEY_HEX: ${LC_COMPOSE_SIGNER_PRIVATE_KEY_HEX}
+      MESSAGES_TTL_SEC: ${LC_COMPOSE_MESSAGES_TTL_SEC}
       PATH_GENERATOR_SUFFIX: ${LC_COMPOSE_PATH_GENERATOR_SUFFIX}
 
       NODE_WEB_PORT: ${LC_COMPOSE_NODE_WEB_PORT}
