--- a/docker-compose/streaming/config/streaming.conf
+++ b/docker-compose/streaming/config/streaming.conf
@@ -3,6 +3,8 @@ chain_id = "${BLOCKCHAIN_NETWORK_ID}"
 
 file_storage = {
   root = "${DATADIR}"
+  ttl_secs = ${MESSAGES_TTL_SEC}
+  pool_period_sec = 7200
   urls = [
     "http://${IPADDR}:${NODE_WEB_PORT}"
   ]
