--- a/config/streaming.conf
+++ b/config/streaming.conf
@@ -3,6 +3,8 @@ chain_id = "mainnet"
 
 file_storage = {
   root = "streaming-directory"
+  ttl_secs = 864000
+  pool_period_sec = 7200
   urls = [
     "http://localhost:8080",
   ]
