Changed to NoEvmTraceCapsule

--- a/docker-compose/streaming/compose.yml
+++ b/docker-compose/streaming/compose.yml
@@ -115,6 +115,7 @@ services:
       --log-config /app/config/node/logback.xml
       -d /app/node-data/snapshot/output-directory
       --es
+      --debug
     ports:
       - ${LC_COMPOSE_IPADDR}:${LC_COMPOSE_NODE_WALLET_PORT}:8090
       - ${LC_COMPOSE_IPADDR}:${LC_COMPOSE_NODE_ZEROMQ_PORT}:5555
